# Virasoft

./: CMakeLists.txt  main.cpp
src/: backgroundsubtracter.cpp  backgroundsubtracter.h  filters.cpp  filters.h  generalpurposefunctions.cpp  loselesssaver.cpp  loselesssaver.h  rollingball.cpp  rollingball.h  skeletonize.cpp  skeletonize.h
tests/: ij.tif  sahinCD.tiff
